# mgdpdf

./: .gitignore  Cargo.toml  build.rs
.claude/: settings.json  settings.local.json
examples/: make_form_pdf.rs  make_icon.rs  make_test_pdf.rs
installer/: mgdpdf.iss
src/: app.rs  lib.rs  main.rs
src/edit/: command.rs  mod.rs
src/edit/commands/: fill_form_field.rs  free_text.rs  highlight.rs  mod.rs  signature.rs
src/pdf/: coords.rs  document.rs  forms.rs  mod.rs  render.rs
src/signature/: library.rs  mod.rs  render.rs
src/tools/: form_fill.rs  free_text.rs  hand.rs  highlight.rs  mod.rs  signature.rs
src/ui/: mod.rs  page_view.rs  signature_modal.rs  theme.rs
tests/: form_roundtrip.rs  free_text_roundtrip.rs  highlight_roundtrip.rs  signature_roundtrip.rs
