[package]
name = "mgdpdf"
version = "0.1.0"
edition = "2021"
description = "Fast Rust PDF viewer and lightweight editor for Windows"
license = "MIT OR Apache-2.0"

[lib]
name = "mgdpdf"
path = "src/lib.rs"

[[bin]]
name = "mgdpdf"
path = "src/main.rs"

[dependencies]
pdfium-render = "0.9"
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "wgpu"] }
egui = "0.34"
egui_extras = { version = "0.34", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
tiny-skia = "0.11"
ab_glyph = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
rfd = "0.15"
directories = "5"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
